For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.


--------------------------------------------------------------------------------
Version <stable-release> released on <releaseDate>

Enhancements
 * Process IDs are now logged in the logs for pfcmd and pfcmd_vlan

--------------------------------------------------------------------------------
Version 3.0.0 released on 2011-09-21

Compatibility notice
 * BACKUP YOUR /usr/local/pf/ BEFORE UPGRADING. Several path changed with this
   release and an rpm upgrade will REMOVE your templates and remediation pages.
   See UPGRADE for more information.
 * We removed the central concept of mode (arp, dhcp or vlan). Now PacketFence
   can operate in multiple modes simultaneously. This new concept is called
   enforcement and is specified per interface in pf.conf.
 * Removed support for Apache prior to version 2.2.0 (#828)
 * Removed support for jpgraph 1.x, 2.x which bumps our depedencies to PHP 5.1

New Hardware Support
 * Avaya/Nortel switches now support the floating network device feature
 * Avaya Wireless Controller support
 * Dlink DWL Access-Point support
 * LG-Ericsson iPecs 4500 support for port-security and MAC Authentication/802.1X
 * Netgear FGS Series support for port-security 

New features
 * Major update to the captive portal look and feel! More modern and 
   professional. Cleaner XHTML/CSS makes customization a lot easier than before.
   Also, all user-visible URLs are now clean and short (no more cgi-bin/... 
   clutter). (#980, #982, #1114)
 * Flexible guest handling (covering temporary passwords, self-registration,
   pre-registration, extension API, etc.)
 * Introduced in-line support: firewall based access control with captive 
   portal. Use this complementary technique when you cannot use VLAN 
   enforcement. (#1227)
 * Ability to view log files from the Web Administration interface (#1080)