@@ -5,6 +5,12 @@ http://www.packetfence.org/
 Notes on upgrading from an older release
 ----------------------------------------
 
+o Upgrading from a version prior to 3.0.1:
+    - MySQL pf user rights
+    The user pf in the database is missing the execute rights.  Make sure
+    you run :
+    mysql -u root -p pf -v < db/upgrade-3.0.0-3.0.1.sql
+
 o Upgrading from a version prior to 3.0.0:
 
     - BACKUP YOUR /usr/local/pf/ BEFORE UPGRADING
