@@ -1,0 +1,3 @@
+-- Missing permissions on pf user for accounting
+
+GRANT execute ON pf.* TO 'pf'@'localhost';
